# rust-repo

./: .gitignore  Cargo.toml  README.md  a-new-improved-post.md  test-post.md
apps/blog-cli/: Cargo.toml
apps/blog-cli/src/: main.rs
apps/http-server/: Cargo.toml
apps/http-server/src/: main.rs
apps/weather-cli/: Cargo.toml
apps/weather-cli/src/: main.rs
apps/yt-dl-rs/: Cargo.toml
apps/yt-dl-rs/src/: main.rs
libs/markdown-generator/: Cargo.toml
libs/markdown-generator/placeholder-lib/: Cargo.toml
libs/markdown-generator/placeholder-lib/src/: lib.rs
libs/markdown-generator/src/: lib.rs
tools/link-checker/: Cargo.toml
tools/link-checker/placeholder-tool/src/: main.rs
tools/link-checker/src/: main.rs
tools/placeholder-tool/: Cargo.toml
