[package]
name = "yt-dl-rs"
version = "0.1.7"
authors = ["Bryan Yi"]
edition = "2021"
description = "A simple to use Cli for downloading YouTube videos"
readme = "README.md"
license = "MIT"
keywords = ["cli"]
categories = ["command-line-utilities"]
homepage = "https://github.com/bryanyi/cli-yt-downloader"
repository = "https://github.com/bryanyi/cli-yt-downloader"

[[bin]]
name = "yt-dl-rs"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rustube = {version = "0.6.0", features = ["callback"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.46.0", features = ["full"] }
indicatif = "0.18.0"
home = "0.5.11"
directories = "6.0.0"
url = "2.5.4"
reqwest = { version = "0.12.22", features = ["json"] }
dirs = "6.0.0"
